# bevy-fast-tilemap

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
assets/: tilemap_shader.wgsl
examples/: animation.rs  animation_custom_shader.rs  bench.rs  chunked.rs  custom_mesh.rs  custom_shader_code.rs  debug.rs  dominance.rs  iso.rs  iso2.rs  iso_dominance.rs  iso_perspective.rs  layers.rs  mouse_controls_camera.rs  multiple_shaders.rs  pattern.rs  simple.rs  test_line_bug.rs  updates.rs
examples/common/: mouse_controls_camera.rs
src/: bundle.rs  extract.rs  lib.rs  map.rs  map_builder.rs  map_uniform.rs  material.rs  pipeline.rs  plugin.rs  prelude.rs  prepare.rs  queue.rs  shader.rs  tile_projection.rs  tilemap_shader.wgsl
