[package]
name = "bevy_fast_tilemap"
version = "0.5.1"
edition = "2021"
description = "A GPU accelerated simple tilemap for bevy"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Droggelbecher/bevy-fast-tilemap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", default-features = false, features = ["bevy_core_pipeline", "bevy_render", "bevy_asset", "bevy_sprite"] }
rand = "0.8.*"
num = "0.4.*"

[dev-dependencies]
bevy = { version = "0.11.0", default-features = false, features = ["bevy_asset", "bevy_winit", "png"] }
bevy-inspector-egui = { version = "0.19.0", default-features = false }

[lib]
name = "bevy_fast_tilemap"
path = "src/lib.rs"
